--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/sbahar/namespacelabel
-  newTag: dev-v25
+  newName: quay.io/sbahar/namespacelabel-controller
+  newTag: main
