--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -1,6 +1,14 @@
 resources:
 - manifests.yaml
 - service.yaml
+- deployment.yaml
+- rbac.yaml
 
 configurations:
 - kustomizeconfig.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: webhook
+  newName: quay.io/sbahar/namespacelabel-webhook
+  newTag: main
