--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       targetPort: 9443
   selector:
-    control-plane: controller-manager
+    control-plane: webhook-server
     app.kubernetes.io/name: namespacelabel
