--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,30 @@
 # More info: https://docs.docker.com/engine/reference/builder/#dockerignore-file
-# Ignore build and test binaries.
+
+# Build artifacts and binaries
 bin/
+dist/
+cover.out
+
+# Git and version control
+.git/
+.gitignore
+
+# Documentation
+*.md
+docs/
+
+# Development and testing
+test/
+examples/
+.golangci.yml
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+Thumbs.db
