--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -63,7 +63,7 @@ jobs:
         curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${{ env.GOLANGCI_LINT_VERSION }}
 
     - name: Run golangci-lint
-      run: $(go env GOPATH)/bin/golangci-lint run --timeout=5m
+      run: $(go env.GOPATH)/bin/golangci-lint run --timeout=5m
 
   # Job 2: Unit Tests with Coverage
   unit-tests:
@@ -136,7 +136,7 @@ jobs:
         go-version: ${{ env.GO_VERSION }}
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@v4
 
     - name: Create kind cluster
       uses: helm/kind-action@v1.8.0
@@ -228,7 +228,7 @@ jobs:
       run: make build
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@v4
 
     - name: Build Docker image
       run: make ${{ matrix.target }}-docker-build
