--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   GO_VERSION: '1.21'
-  GOLANGCI_LINT_VERSION: 'v1.54'
+  GOLANGCI_LINT_VERSION: 'latest'
 
 jobs:
   # Job 1: Code Quality and Formatting
