--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -175,31 +175,23 @@ jobs:
         # Deploy controller and webhook with correct image references
         make deploy CONTROLLER_IMG=controller:latest WEBHOOK_IMG=webhook:latest
 
-        kubectl patch deployment namespacelabel-controller-manager -n namespacelabel-system --patch '{
-          "spec": {
-            "template": {
-              "spec": {
-                "containers": [{
-                  "name": "manager",
-                  "imagePullPolicy": "IfNotPresent"
-                }]
-              }
-            }
+        # Patch manager container in controller deployment
+        kubectl patch deployment namespacelabel-controller-manager -n namespacelabel-system --type=json --patch '[
+          {
+            "op": "replace",
+            "path": "/spec/template/spec/containers/0/imagePullPolicy",
+            "value": "IfNotPresent"
           }
-        }'
+        ]'
 
-        kubectl patch deployment namespacelabel-webhook-server -n namespacelabel-system --patch '{
-          "spec": {
-            "template": {
-              "spec": {
-                "containers": [{
-                  "name": "webhook-server",
-                  "imagePullPolicy": "IfNotPresent"
-                }]
-              }
-            }
+        # Patch webhook container in webhook deployment
+        kubectl patch deployment namespacelabel-webhook-server -n namespacelabel-system --type=json --patch '[
+          {
+            "op": "replace",
+            "path": "/spec/template/spec/containers/0/imagePullPolicy",
+            "value": "IfNotPresent"
           }
-        }'
+        ]'
         
         # Wait for deployments to be ready
         kubectl wait --for=condition=Available deployment/namespacelabel-controller-manager -n namespacelabel-system --timeout=300s
